--- a/jade/templates/index.jade
+++ b/jade/templates/index.jade
@@ -2,6 +2,7 @@ doctype html
 html
     head
         title Page title
+        meta(charset='UTF-8')
         link(rel='stylesheet', href='css/style.css')
     body
-    h1 Hello World
+        h1 Hello World
