--- a/sass/utilities/_common.scss
+++ b/sass/utilities/_common.scss
@@ -108,8 +108,8 @@
 /**
 * Hide text only visually but is focusable
 */
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
+.visually-hidden.focusable:active,
+.visually-hidden.focusable:focus {
 	position : static;
 	clip : auto;
 	height : auto;
@@ -119,7 +119,7 @@
 }
 
 .visually-hidden{
-  position: absolute !important;
+  position: absolute;
   height: 1px;
   width: 1px;
   overflow: hidden;
