--- a/jade/templates/index.jade
+++ b/jade/templates/index.jade
@@ -3,6 +3,8 @@ html
     head
         title Page title
         meta(charset='UTF-8')
-        link(rel='stylesheet', href='css/style.css')
+        link(rel='stylesheet', href='style.css')
     body
         h1 Hello World
+        h2 Enjoy this framework        
+        p Contribute on #[a(href='http://github.com/elchiconube/frontend-framework') github]. #[strong Thanks!]
