--- a/sass/atoms/_global.scss
+++ b/sass/atoms/_global.scss
@@ -6,8 +6,8 @@ html{}
 
 body{
 	font-family: $font-base;
-	background-color: $color-white;
-	color:$color-black_grey;
+	background-color: $color-black_grey;
+	color:$color-white;
 }
 
 /*------------------------------------*\
