--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,7 @@
 /**
 * Utilities
 **/
-@import "utilities/reset.scss";
+@import "utilities/normalize.scss";
 @import "utilities/fonts.scss";
 @import "utilities/variables.scss";
 @import "utilities/mixins.scss";
