--- a/sass/atoms/_global.scss
+++ b/sass/atoms/_global.scss
@@ -16,14 +16,29 @@ body{
     $TEXT
 \*------------------------------------*/
 
-h1,
-h2,
-h3,
-h4,
-h5{
-
+h1 {
+  font-size: 2rem;
 }
 
+h2 {
+  font-size: 1.75rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+h5 {
+  font-size: 1rem;
+}
+
+h6 {
+  font-size: .75rem;
+}
 
 p{
     -webkit-font-smoothing: antialiased;
@@ -47,7 +62,7 @@ strong{
 }
 
 em{
-	
+
 }
 
 /*------------------------------------*\
