grid and autoprefix

--- a/jade/templates/index.jade
+++ b/jade/templates/index.jade
@@ -7,5 +7,41 @@ block title
       meta(description='Welcome to Front-End Framework')
 
 block content  
-  h1 Hello World
-  p Contribute on #[a(href='http://github.com/elchiconube/frontend-framework') github]. #[strong Thanks!]
+  h1 Front-end Framework
+  p Hi my name is Oscar and I am a front-end developer who build my own framework, enjoy and contribute on #[a(href='http://github.com/elchiconube/frontend-framework') github]. #[strong Thanks!]
+  
+  h2 Grid example
+  .example.grid.col-4.center
+    .column
+      p Column one
+    .column
+      p Column two
+    .column
+      p Column three
+    .column
+      p Column four
+  .example.grid.col-3.center
+    .column
+      p Column one
+    .column
+      p Column two
+    .column
+      p Column three
+  .example.grid.col-2.center
+    .column
+      p Column one
+    .column
+      p Column two
+  .example.grid.col-1.center
+    .column
+      p Column one
+  .example.grid.col-2.right.center
+    .column
+      p Column left
+    .column
+      p Columna right
+  .example.grid.col-2.left.center
+    .column
+      p Column left
+    .column
+      p Column right
