--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -94,6 +94,7 @@ $index-xl  : 9999;
 
 $bp-xl  : 85.00em;   // 1360px //
 $bp-l   : 68.75em;   // 1100px //
+$bp-m-l : 61.20em;   //  980px //
 $bp-m   : 48.00em;   //  768px //
-$bp-s-m : 37.50em;   //  600px //
+$bp-s-m : 41.20em;   //  660px //
 $bp-s   : 30.00em;   //  480px //
