--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -86,12 +86,17 @@ $shadow: 0 0.5px 0.2px rgba(0,0,0,.25);
     $INDEX
 \*------------------------------------*/
 
-$index-xl  : 9999;
+$index-xl: 9999;
+
+/*------------------------------------*\
+    $GUTTER
+\*------------------------------------*/
+
+$gutter: 10px;
 
 /*------------------------------------*\
     $BREAKPOINTS
 \*------------------------------------*/
-
 
 $breakpoints: (
   "bp-xl"  : 85.00em, // 1360px //
